dropshot/tests/fail/bad_channel8.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel8.rs:13:1
   |
13 | / fn bad_channel(
14 | |     _rqctx: RequestContext<()>,
15 | |     _upgraded: WebsocketConnection,
16 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: endpoint handler functions must be async
  --> tests/fail/bad_channel8.rs:13:1
   |
13 | fn bad_channel(
   | ^^
